--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
+
+@import '~@standardkit/themes/scss/default/theme';
+@import '~@standardkit/themes/scss/default/font';
+
+
+@import '~@standardkit/styles/scss/style';
