setup getting started standardkit stub

--- a/src/app/pages/getting-started/getting-started.page.html
+++ b/src/app/pages/getting-started/getting-started.page.html
@@ -1,6 +1,11 @@
-<h1>Getting started</h1>
+<sk-title>Getting Started</sk-title>
+<sk-divider></sk-divider><!-- TODO : Border bottom for title instead (diluted color of title itself or override)-->
 
-<h2>Introduction</h2>
-<p>Some text</p>
+<br><!-- TODO : Margin of divider instead-->
+<sk-subtitle>Introduction</sk-subtitle>
+<p>Welcome to the StandardKit Docs!</p>
 
-<h2>Installation</h2>
+<!--<sk-section> TODO : Create component-->
+<sk-subtitle>Installation</sk-subtitle>
+<sk-code-block>npm install --save @standardkit/styles</sk-code-block><!--TODO : Style this-->
+<!--</sk-section>-->
